# kernel

./: .replit  Cargo.toml  Makefile.toml  build.rs  log  replit.nix  stuff.txt
.cargo/: config  config.toml
base/: Cargo.toml  Makefile.toml
base/src/: main.rs  platform_logger.rs
src/: interrupts.rs  lib.rs  logger.rs  main.rs  platform_logger.rs  vga_utils.rs
src/allocator/: growable_slice.rs  heap.rs  memory_manager.rs  mod.rs  paging.rs  uefi_interop.rs  utilities.rs
src/arch/: mod.rs
src/asm/: boot.S
src/collections/: bitslice.rs  directing_allocator.rs  growable_slice.rs  mod.rs
src/errors/: allocator.rs  generic.rs  heap_allocator.rs  interrupt_manager.rs  memory_manager.rs  mod.rs  physical_allocator.rs  power_manager.rs  timer_manager.rs
src/info/: board.rs  mod.rs
src/interrupts/: mod.rs
src/macros/: bitflags.rs  mod.rs
src/memory/: addresses.rs  constants.rs  errors.rs  mod.rs  utilities.rs
src/misc/: link32.ld  link32m.ld  link64.ld  thumbv6m-none-eabi.json  x86_64-unknown-none.json  x86_64-unknown-none.ld
src/peripherals/: cpu.rs  gpio.rs  mailbox.rs  mod.rs  uart.rs
src/smp/: core_local.rs  mod.rs
src/structures/: gdt.rs  idt.rs  mod.rs  tss.rs
src/sync/: lazy.rs  mod.rs  rwlock.rs  semaphore.rs  singleton.rs
src/traits/: init.rs  interrupt_manager.rs  memory_manager.rs  mod.rs  physical_allocator.rs  physical_memory_allocator.rs  platform.rs  platform_address.rs  power.rs  raw_address.rs  timer_manager.rs  virtual_memory_manager.rs
xtask/: Cargo.toml
xtask/src/: builder.rs  commands.rs  logger.rs  main.rs  tools.rs
(+76 files in other folders)
