[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bitflags = "1.3.2"
clap = { version = "3.2.17", features = ["derive"] }
duct = "0.13.5"
fern = { version = "0.6.1", features = ["colored"] }
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
thiserror = "1.0.32"
